# auto-yt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/auto_yt/: __init__.py  audio.py  cli.py  player.py  recognizer.py  youtube.py
